90% verdadeiro front concluido

--- a/customer/data.html
+++ b/customer/data.html
@@ -48,16 +48,12 @@
     </section>
 
     <main>
-      <a href="">&#128393; Alterar</a>
+      <!-- <a href="">&#128393; Alterar</a> -->
 
       <div class="box">
         <span>
           <p class="dado">Nome</p>
           <span id="name"></span>
-        </span>
-        <span>
-          <p class="dado">Sobrenome</p>
-          Azevedo
         </span>
         <span>
           <p class="dado">Nome de Usuário</p>
@@ -74,6 +70,10 @@
         <span>
           <p class="dado">Data de Nascimento</p>
           <span id="birthDate"></span>
+        </span>
+        <span>
+          <p class="dado">Gênero</p>
+          <span id="gender"></span>
         </span>
       </div>
 
