--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -146,7 +146,7 @@
       </div>
 
       <div class="bottom">
-        <button onclick="chooseAddress()">continuar</button>
+        <button onclick="chooseAddress(this)">continuar</button>
       </div>
 
     </div>
@@ -159,7 +159,7 @@
 
       <div class="box2" id="box2">
 
-        <input type="radio" name="address" value="joao">
+        <!-- ENDEREÇOS -->
 
       </div>
 
