--- a/customer/scheduled.html
+++ b/customer/scheduled.html
@@ -48,7 +48,7 @@
       <h1>Coletas Agendadas</h1>
     </section>
 
-    <main>
+    <main id="main">
       <!-- <div class="collect">
         <div class="image">
           <img src="../assets/icons/scheduled.png" alt="" />
