--- a/scavenger/data.html
+++ b/scavenger/data.html
@@ -46,48 +46,48 @@
     </section>
 
     <main>
-      <a href="">&#128393; Alterar</a>
+      <!-- <a href="">&#128393; Alterar</a> -->
 
       <div class="box">
         <span>
           <p class="dado">Nome</p>
-          Guilherme
-        </span>
-        <span>
-          <p class="dado">Sobrenome</p>
-          Azevedo
+          <span id="name"></span>
         </span>
         <span>
           <p class="dado">Nome de Usuário</p>
-          guiazevedo
+          <span id="username"></span>
         </span>
         <span>
           <p class="dado">E-mail</p>
-          gui.azevedo@ymail.com
+          <span id="email"></span>
         </span>
         <span>
           <p class="dado">Telefone</p>
-          14 997170127
+          <span id="phone"></span>
+        </span>
+        <span>
+          <p class="dado">Gênero</p>
+          <span id="gender"></span>
         </span>
         <span>
           <p class="dado">Data de Nascimento</p>
-          17/01/2001
+          <span id="birthDate"></span>
         </span>
         <span>
           <p class="dado">Modo de Trabalho</p>
-          Independente
+          <span id="work"></span>
         </span>
         <span>
           <p class="dado">Materiais de Interesse</p>
-          Metal, Plástico, Vidro
+          <span id="materials"></span>
         </span>
         <span>
           <p class="dado">Dias Disponíveis</p>
-          Segunda-Feira
+          <span id="days"></span>
         </span>
         <span>
           <p class="dado">Período Adequado</p>
-          Tarde
+          <span id="period"></span>
         </span>
       </div>
       
