--- a/scavenger/login.html
+++ b/scavenger/login.html
@@ -81,10 +81,10 @@
 
         <div class="form">
           <div class="background">
-            <select name="" id="">
+            <select name="" class="work">
               <option value="">Selecione o tipo de catador</option>
-              <option value="">Independente</option>
-              <option value="">Cooperativa</option>
+              <option value="Independente">Independente</option>
+              <option value="Cooperativa">Cooperativa</option>
             </select>
 
             <h2>Quais materiais deseja coletar?</h2>
