--- a/customer/requested.html
+++ b/customer/requested.html
@@ -76,6 +76,8 @@
         </div>
       </div> -->
 
+      <p>Você não possui Coletas Solicitadas...</p>
+
     </main>
 
     <script type="text/javascript" src="../js/customer/requested.js"></script>
