--- a/home.html
+++ b/home.html
@@ -210,10 +210,10 @@
 
           <div class="background">
 
-            <select name="" id="">
+            <select name="" class="work">
               <option value="">Selecione o tipo de coletor</option>
-              <option value="">Independente</option>
-              <option value="">Cooperativa</option>
+              <option value="Independente">Independente</option>
+              <option value="Cooperativa">Cooperativa</option>
             </select>
 
             <h2>Quais materiais deseja coletar?</h2>
