front end concluido, aguardando ultimos ajustes back

--- a/customer/address.html
+++ b/customer/address.html
@@ -54,18 +54,8 @@
 
       <div class="box" id="box">
 
-        <!-- <div class="address">
-          <h3>Casa</h3>
-          <ul>
-            <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-            <li><strong>Número: </strong>820</li>
-            <li><strong>Complemento: </strong>Apto 202</li>
-            <li><strong>Bairro: </strong>Parque das Universidades</li>
-            <li><strong>CEP: </strong>13087-571</li>
-            <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
-          </ul>
-        </div> -->
-        
+        <p class="nothing">Nenhum Endereço Cadastrado ...</p>        
+
       </div>
       
     </main>
