--- a/customer/newAddress.html
+++ b/customer/newAddress.html
@@ -56,8 +56,8 @@
           <label for="name">Nome do Endereço</label>
           <label for="cep">CEP</label>
           
-          <input type="text" name="" id="name" class="name">
-          <input type="number" name="" id="cep" class="cep" />
+          <input type="text" name="" id="name" class="name" placeholder="ex: Casa, Trabalho ...">
+          <input type="number" name="" id="cep" class="cep" placeholder="ex: 12345678"/>
           
           <label for="street">Rua</label>
           <label for="number">Número</label>
