--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -159,7 +159,7 @@
 
       <div class="box2" id="box2">
 
-        <!-- ENDEREÇOS -->
+        <p class="nothing">Nenhum Endereço Cadastrado ...</p>
 
       </div>
 
