--- a/customer/requested.html
+++ b/customer/requested.html
@@ -49,34 +49,8 @@
     </section>
 
     <main id="main">
-      <!-- <div class="collect">
-        <div class="image">
-          <img src="../assets/icons/requested.png" alt="" />
-        </div>
 
-        <div class="content">
-          <h1>Coleta #1</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Endereço: <span>Casa</span></li>
-          </ul>
-        </div>
-
-        <div class="buttons">
-          <button class="cancel">
-            <span>cancelar</span>
-            <img src="../assets/icons/cancel.png" alt="" />
-          </button>
-        </div>
-      </div> -->
-
-      <p>Você não possui Coletas Solicitadas...</p>
+      <p class="nothing">Nenhuma Coleta Solicitada ...</p>
 
     </main>
 
