--- a/scavenger/login.html
+++ b/scavenger/login.html
@@ -35,7 +35,7 @@
 
               <label for="userName">Nome de usuário</label>
               <label for="phone">Telefone</label>
-              <input type="text" name="" id="userName" class="userName" />
+              <input type="text" name="" id="userName" class="userName" placeholder="mínimo de 3 caracteres"/>
               <input type="tel" name="" id="phone" class="phone" />
 
               <label for="email">E-mail</label>
@@ -45,7 +45,7 @@
 
               <label for="password">Senha</label>
               <label for="passwordConf">Confirmação Senha</label>
-              <input type="password" name="" id="password" class="password" />
+              <input type="password" name="" id="password" class="password" placeholder="mínimo de 6 caracteres"/>
               <input type="password" name="" id="passwordConf" class="passwordConf" />
             </div>
 
