--- a/customer/historic.html
+++ b/customer/historic.html
@@ -49,28 +49,9 @@
     </section>
 
     <main>
-      <!-- <div class="collect">
-        <div class="image">
-          <img src="../assets/icons/historic.png" alt="" />
-        </div>
+      
+      <p class="nothing">Histórico Vazio ...</p>
 
-        <div class="content">
-          <h1>Coleta #1</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Endereço: <span>Casa</span></li>
-            <li>Coletor: <span>Josué</span></li>
-          </ul>
-        </div>
-
-        <div class="buttons"></div>
-      </div> -->
     </main>
 
     <script type="text/javascript" src="../js/customer/historic.js"></script>
