--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 
               <label for="userName">Nome de usuário</label>
               <label for="phone">Telefone</label>
-              <input type="text" name="" id="userName" class="userName">
+              <input type="text" name="" id="userName" class="userName" placeholder="mínimo de 3 caracteres">
               <input type="tel" name="" id="phone" class="phone">
 
               <label for="email">E-mail</label>
@@ -102,7 +102,7 @@
 
               <label for="password">Senha</label>
               <label for="passwordConf">Confirmação Senha</label>
-              <input type="password" name="" id="password" class="password">
+              <input type="password" name="" id="password" class="password" placeholder="mínimo de 6 caracteres">
               <input type="password" name="" id="passwordConf" class="passwordConf">
 
             </div>
@@ -155,7 +155,7 @@
 
             <label for="userName">Nome de usuário</label>
             <label for="phone">Telefone</label>
-            <input type="text" name="" id="userName" class="userNameScavenger">
+            <input type="text" name="" id="userName" class="userNameScavenger" placeholder="mínimo de 3 caracteres">
             <input type="tel" name="" id="phone" class="phone">
 
             <label for="email">E-mail</label>
@@ -165,7 +165,7 @@
 
             <label for="password">Senha</label>
             <label for="passwordConf">Confirmação Senha</label>
-            <input type="password" name="" id="password" class="password">
+            <input type="password" name="" id="password" class="password" placeholder="mínimo de 6 caracteres">
             <input type="password" name="" id="passwordConf" class="passwordConf">
 
           </div>
