--- a/scavenger.html
+++ b/scavenger.html
@@ -46,32 +46,7 @@
 
     <main id="main">
       
-      <!-- <div class="collect">
-        <div class="image">
-          <img src="assets/icons/requested.png"/>
-        </div>
-
-        <div class="content">
-          <h1>Coleta #1</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>Dias: <span>segunda-feira, quarta-feira, quinta-feira</span></li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Cidade: <span>Itaporanga - SP</span></li>
-            <li>Bairro: <span>Centro</span></li>
-            <li>Endereço: <span>Bom Jesus, 1167 - Apto 202</span></li>
-          </ul>
-        </div>
-
-        <div class="buttons">
-          <button class="deal">
-            <span>aceitar</span>
-            <img src="../assets/icons/deal.png"/>
-          </button>
-        </div>
-      </div> -->
+      <p class="nothing">Nenhuma Coleta Solicitada ...</p>
 
     </main>
 
