--- a/scavenger/scheduled.html
+++ b/scavenger/scheduled.html
@@ -47,37 +47,7 @@
 
     <main id="main">
 
-      <!-- <div class="collect">
-        <div class="image">
-          <img src="../assets/icons/scheduled.png" alt="" />
-        </div>
-
-        <div class="content">
-          <h1>Coleta #1</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>Dias: <span>segunda-feira, quarta-feira, quinta-feira</span></li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Cidade: <span>Itaporanga - SP</span></li>
-            <li>Bairro: <span>Centro</span></li>
-            <li>Endereço: <span>Bom Jesus, 1167 - Apto 202</span></li>
-          </ul>
-        </div>
-
-        <div class="buttons">
-          <button class="cancel">
-            <span>cancelar</span>
-            <img src="../assets/icons/cancel.png" alt="" />
-          </button>
-
-          <button class="done">
-            <span>finalizar</span>
-            <img src="../assets/icons/done.png" alt="" />
-          </button>
-        </div>
-      </div> -->
+      <p class="nothing">Nenhuma Coleta Agendada ...</p>
 
     </main>
 
