--- a/customer/historic.html
+++ b/customer/historic.html
@@ -48,7 +48,7 @@
       <h1>Histórico de Coletas</h1>
     </section>
 
-    <main>
+    <main id="main">
       
       <p class="nothing">Histórico Vazio ...</p>
 
