--- a/home.html
+++ b/home.html
@@ -150,23 +150,23 @@
 
             <label for="name">Nome</label>
             <label for="lastName">Sobrenome</label>
-            <input type="text" name="" id="name" class="name">
-            <input type="text" name="" id="lastName" class="lastName">
+            <input type="text" name="" id="name" class="nameScavenger">
+            <input type="text" name="" id="lastName" class="lastNameScavenger">
 
             <label for="userName">Nome de usuário</label>
             <label for="phone">Telefone</label>
             <input type="text" name="" id="userName" class="userNameScavenger" placeholder="mínimo de 3 caracteres">
-            <input type="tel" name="" id="phone" class="phone">
+            <input type="tel" name="" id="phone" class="phoneScavenger">
 
             <label for="email">E-mail</label>
             <label for="emailConf">Confirmação E-mail</label>
             <input type="email" name="" id="email" class="emailScavenger">
-            <input type="email" name="" id="emailConf" class="emailConf">
+            <input type="email" name="" id="emailConf" class="emailConfScavenger">
 
             <label for="password">Senha</label>
             <label for="passwordConf">Confirmação Senha</label>
-            <input type="password" name="" id="password" class="password" placeholder="mínimo de 6 caracteres">
-            <input type="password" name="" id="passwordConf" class="passwordConf">
+            <input type="password" name="" id="password" class="passwordScavenger" placeholder="mínimo de 6 caracteres">
+            <input type="password" name="" id="passwordConf" class="passwordConfScavenger">
 
           </div>
 
