--- a/scavenger.html
+++ b/scavenger.html
@@ -36,7 +36,7 @@
         </ul>
       </nav>
 
-      <a href="">Coletas</a>
+      <a href="">Coletas Disponíveis</a>
       <a href="home.html" class="logout">&#8592; sair</a>
     </div>
 
