--- a/scavenger/scheduled.html
+++ b/scavenger/scheduled.html
@@ -37,7 +37,7 @@
         </ul>
       </nav>
 
-      <a href="../scavenger.html">Coletas</a>
+      <a href="../scavenger.html">Coletas Disponíveis</a>
       <a href="../home.html" class="logout">&#8592; sair</a>
     </div>
 
